--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -21,10 +21,10 @@ body {
   }
   
 
-  h1{
+  /* h1{
       font-family: modern-sans;
   }
-  
+   */
 
   
   .underline-magical {
@@ -67,4 +67,26 @@ body {
 .header-logo{
     height: 38px;
     margin: 0px 0px 0px 20px;
+}
+
+.hero-container{
+    height: 100vh;
+
+    width: 100%;
+}
+.hero-text-container{
+    margin: 100px 0px 0px 50%;
+}
+
+.home-hero-heading{
+    margin:0px 0px 0px 0px;
+}
+.home-hero-tagline{
+    margin: 20px 0px 0px 0px;
+}
+
+@media screen and (max-width:999px){
+    .hero-text-container{
+        margin: 100px 10% 0px 10%;
+    }
 }
