--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -68,17 +68,25 @@ body {
     height: 38px;
     margin: 0px 0px 0px 20px;
 }
-.theme--dark.v-application {
- background: transparent !important; 
-    color: #FFFFFF;
-}
+
 .hero-container{
     height: 100vh;
+    background-image: linear-gradient(
+        109.6deg,
+        rgba(193, 98, 253, 1) 11.2%,
+        rgba(0, 49, 165, 1) 91.1%
+      );
+      position: relative;
 
     width: 100%;
+    margin-top: -63px;
+    clip-path: polygon( 0 0, /* left top */ 100% 0, /* right top */ 100% 90%, /* right bottom */ 0 100% /* left bottom */ );
 }
+
+
 .hero-text-container{
-    margin: 100px 0px 0px 50%;
+    margin: 0px 5% 0px 50%;
+    padding: 202px 0px 0px 0px;
 }
 
 .home-hero-heading{
@@ -92,4 +100,14 @@ body {
     .hero-text-container{
         margin: 100px 10% 0px 10%;
     }
+}
+
+
+/* home-section-2 */
+
+.home-section-2{
+    height: 80vh;
+    width: 100%;
+    position: relative;
+   
 }
