--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -135,3 +135,45 @@ body {
     position: relative;
    
 }
+
+/* signin */
+
+.login-container{
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  width: 100%;
+}
+
+.login-left{
+  width: 50%;
+  height: 100vh;
+  position: relative;
+  
+}
+
+.login-left img{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  object-fit: cover;
+}
+
+.login-left .login-left-overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  background: linear-gradient(#bc35de 0%, #341b6f 100%);
+  opacity: 0.88;
+
+}
+
+.login-right{
+  width: 50%;
+  height: 100vh;
+  position: relative;
+ 
+}
+
