--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -174,6 +174,23 @@ body {
   width: 50%;
   height: 100vh;
   position: relative;
- 
+  padding: 30px 6% 30px  6%;
 }
+
+.login-right .login-rn-logo{
+  width: 170px;
+}
+
+
+.social-login .google-login{
+  width: 249px;
+  height: 48px;
+  border-radius: 11px;
+  background: #ea4335;
+  position: absolute;
+
+}
+
+
+
 
