--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -174,7 +174,7 @@ body {
   width: 50%;
   height: 100vh;
   position: relative;
-  padding: 30px 6% 30px  6%;
+  padding: 30px 10% 30px  6%;
   background-color: #290040;
 }
 
@@ -191,18 +191,18 @@ body {
   flex-direction: row;
 }
 .social-login .google-login{
-  width: 45%;
-  height: 48px;
-  border-radius: 11px;
+  width: 47.5%;
+  height: 36px;
+  border-radius: 4px;
   background: #ea4335;
   
 
 }
 
 .social-login .github-login{
-  width:45%;
-  height: 48px;
-  border-radius: 11px;
+  width:47.5%;
+  height: 36px;
+  border-radius: 4px;
   background: #333;
   margin-left: 6%;
 
@@ -210,21 +210,36 @@ body {
 
 .social-login>button>img{
   position: relative;
-top: 7px;
+  height:20px;
+top: 5px;
 right: 9px;
 margin: -9px 2px 0px 0px;
 }
 
+.social-login button:hover{
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+}
+
+.social-login .google-login:hover{
+  background: #c03023;
+}
+
+.social-login .github-login:hover{
+  background: rgb(36, 36, 36);
+}
+
+
 .login-button{
-  width: 275px;
-height: 61px;
+  width: 55%;
+height: 48px !important;
 border-radius: 11px;
 background: linear-gradient(#bc35de 0%, #341b6f 100%);
 }
 
 .sign-up-button{
-  width: 210px;
-  height: 61px;
+  width: 45%;
+  height: 48px !important;
   border-radius: 11px;
   background-color: #fff;
   
