--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -239,14 +239,14 @@ margin: -9px 2px 0px 0px;
 }
 
 
-.login-button{
+.sign-button-1{
   width: 55%;
 height: 48px !important;
 border-radius: 11px;
 background: linear-gradient(#bc35de 0%, #341b6f 100%);
 }
 
-.sign-up-button{
+.sign-button-2{
   width: 45%;
   height: 48px !important;
   border-radius: 11px;
